--- a/MC Juoppopack/assets/minecraft/lang/fi_fi.json
+++ b/MC Juoppopack/assets/minecraft/lang/fi_fi.json
@@ -3358,7 +3358,7 @@
     "item.minecraft.bone": "Luu",
     "item.minecraft.bone_meal": "Luujauho",
     "item.minecraft.book": "Kirja",
-    "item.minecraft.bow": "Jousi",
+    "item.minecraft.bow": "AK-47",
     "item.minecraft.bowl": "Kulho",
     "item.minecraft.bread": "Leip\u00e4",
     "item.minecraft.brewing_stand": "Hautumateline",
@@ -3403,7 +3403,7 @@
     "item.minecraft.creeper_banner_pattern": "Viirikuvio",
     "item.minecraft.creeper_banner_pattern.desc": "Creeper-r\u00e4j\u00e4hde",
     "item.minecraft.creeper_spawn_egg": "Luo creeper",
-    "item.minecraft.crossbow": "Varsijousi",
+    "item.minecraft.crossbow": "AWP",
     "item.minecraft.crossbow.projectile": "Ammus:",
     "item.minecraft.cyan_dye": "Syaani v\u00e4riaine",
     "item.minecraft.dark_oak_boat": "Tumma tammivene",
@@ -3438,9 +3438,9 @@
     "item.minecraft.enchanted_book": "Lumottu kirja",
     "item.minecraft.enchanted_golden_apple": "Lumottu kultaomena",
     "item.minecraft.end_crystal": "End-kristalli",
-    "item.minecraft.ender_eye": "Ender-silm\u00e4",
-    "item.minecraft.ender_pearl": "Ender-helmi",
-    "item.minecraft.enderman_spawn_egg": "Luo enderman",
+    "item.minecraft.ender_eye": "Neekerin-silm\u00e4",
+    "item.minecraft.ender_pearl": "Neekerin Silmu",
+    "item.minecraft.enderman_spawn_egg": "Luo Neekeri",
     "item.minecraft.endermite_spawn_egg": "Luo endermite",
     "item.minecraft.evoker_spawn_egg": "Luo manaaja",
     "item.minecraft.experience_bottle": "Lumottu pullo",
