Amerikan enkku support
en_us support

--- a/MC Juoppopack/assets/minecraft/lang/fi_fi.json
+++ b/MC Juoppopack/assets/minecraft/lang/fi_fi.json
@@ -3544,7 +3544,7 @@
     "item.minecraft.lapis_lazuli": "Lasuriitti",
     "item.minecraft.lava_bucket": "Laava\u00e4mp\u00e4ri",
     "item.minecraft.lead": "Talutushihna",
-    "item.minecraft.leather": "Nahka",
+    "item.minecraft.leather": "Oravan Esinahka",
     "item.minecraft.leather_boots": "Nahkasaappaat",
     "item.minecraft.leather_chestplate": "Nahkatakki",
     "item.minecraft.leather_helmet": "Nahkalakki",
