Vähä oreja :D ja käännöksiä

--- a/MC Juoppopack/assets/minecraft/lang/fi_fi.json
+++ b/MC Juoppopack/assets/minecraft/lang/fi_fi.json
@@ -16,7 +16,7 @@
     "advMode.mode.autoexec.bat": "Aina p\u00e4\u00e4ll\u00e4",
     "advMode.mode.conditional": "Ehdollinen",
     "advMode.mode.redstone": "Impulssi",
-    "advMode.mode.redstoneTriggered": "Tarvitsee redstonea",
+    "advMode.mode.redstoneTriggered": "Tarvitsee Oppuniumia",
     "advMode.mode.sequence": "Ketju",
     "advMode.mode.unconditional": "Ehdoton",
     "advMode.nearestPlayer": "\"@p\" asettaa kohteeksi l\u00e4himm\u00e4n pelaajan",
@@ -1263,7 +1263,7 @@
     "block.minecraft.cobweb": "H\u00e4m\u00e4h\u00e4kinseitti",
     "block.minecraft.cocoa": "Kaakao",
     "block.minecraft.command_block": "Komentokuutio",
-    "block.minecraft.comparator": "Redstone-komparaattori",
+    "block.minecraft.comparator": "Oppunium-komparaattori",
     "block.minecraft.composter": "Komposti",
     "block.minecraft.conduit": "Kanavoija",
     "block.minecraft.copper_block": "Kuparikuutio",
@@ -1364,11 +1364,11 @@
     "block.minecraft.deepslate_coal_ore": "Pohjaliuskehiilimalmi",
     "block.minecraft.deepslate_copper_ore": "Pohjaliuskekuparimalmi",
     "block.minecraft.deepslate_diamond_ore": "Pohjaliusketimanttimalmi",
-    "block.minecraft.deepslate_emerald_ore": "Pohjaliuskesmaragdimalmi",
+    "block.minecraft.deepslate_emerald_ore": "Pohjaliuskejuopponium",
     "block.minecraft.deepslate_gold_ore": "Pohjaliuskekultamalmi",
     "block.minecraft.deepslate_iron_ore": "Pohjaliuskerautamalmi",
     "block.minecraft.deepslate_lapis_ore": "Pohjaliuskelasuriittimalmi",
-    "block.minecraft.deepslate_redstone_ore": "Pohjaliuskeredstone-malmi",
+    "block.minecraft.deepslate_redstone_ore": "PohjaliuskeOppunium-malmi",
     "block.minecraft.deepslate_tile_slab": "Pohjaliuskekivikaakelilaatta",
     "block.minecraft.deepslate_tile_stairs": "Pohjaliuskekivikaakeliportaat",
     "block.minecraft.deepslate_tile_wall": "Pohjaliuskivikekaakelimuuri",
@@ -1389,7 +1389,7 @@
     "block.minecraft.dried_kelp_block": "Kuivattu rakkolev\u00e4kuutio",
     "block.minecraft.dripstone_block": "Tippukivikuutio",
     "block.minecraft.dropper": "Pudottaja",
-    "block.minecraft.emerald_block": "Smaragdikuutio",
+    "block.minecraft.emerald_block": "juopponiumkuutio",
     "block.minecraft.emerald_ore": "Munapäämalmi",
     "block.minecraft.enchanting_table": "Lumousp\u00f6yt\u00e4",
     "block.minecraft.end_gateway": "End-portti",
@@ -1812,14 +1812,14 @@
     "block.minecraft.red_terracotta": "Punainen terrakotta",
     "block.minecraft.red_tulip": "Punainen tulppaani",
     "block.minecraft.red_wool": "Punainen villa",
-    "block.minecraft.redstone_block": "Redstone-kuutio",
-    "block.minecraft.redstone_lamp": "Redstone-lamppu",
-    "block.minecraft.redstone_ore": "Redstone-malmi",
-    "block.minecraft.redstone_torch": "Redstone-soihtu",
-    "block.minecraft.redstone_wall_torch": "Sein\u00e4lle asetettu redstone-soihtu",
-    "block.minecraft.redstone_wire": "Redstone-johdin",
+    "block.minecraft.redstone_block": "Oppunium-kuutio",
+    "block.minecraft.redstone_lamp": "Oppunium-lamppu",
+    "block.minecraft.redstone_ore": "Oppunium-malmi",
+    "block.minecraft.redstone_torch": "Oppunium-soihtu",
+    "block.minecraft.redstone_wall_torch": "Sein\u00e4lle asetettu Oppunium-soihtu",
+    "block.minecraft.redstone_wire": "Oppunium-johdin",
     "block.minecraft.reinforced_deepslate": "Vahvistettu pohjaliuskekivi",
-    "block.minecraft.repeater": "Redstone-toistin",
+    "block.minecraft.repeater": "Oppunium-toistin",
     "block.minecraft.repeating_command_block": "Toistava komentokuutio",
     "block.minecraft.respawn_anchor": "Uudelleensyntymisankkuri",
     "block.minecraft.rooted_dirt": "Juurtunut multa",
@@ -3114,7 +3114,7 @@
     "flat_world_preset.minecraft.classic_flat": "Klassinen tasainen",
     "flat_world_preset.minecraft.desert": "Aavikko",
     "flat_world_preset.minecraft.overworld": "Yl\u00e4maailma",
-    "flat_world_preset.minecraft.redstone_ready": "Valmiina redstonelle",
+    "flat_world_preset.minecraft.redstone_ready": "Valmiina Oppunium",
     "flat_world_preset.minecraft.snowy_kingdom": "Luminen valtakunta",
     "flat_world_preset.minecraft.the_void": "Tyhjyys",
     "flat_world_preset.minecraft.tunnelers_dream": "Kaivosmiehen unelma",
@@ -3706,7 +3706,7 @@
     "item.minecraft.raw_iron": "Raaka rauta",
     "item.minecraft.recovery_compass": "Paluukompassi",
     "item.minecraft.red_dye": "Punainen v\u00e4riaine",
-    "item.minecraft.redstone": "Redstone-jauhe",
+    "item.minecraft.redstone": "Oppunium-jauhe",
     "item.minecraft.rotten_flesh": "M\u00e4d\u00e4ntynyt liha",
     "item.minecraft.saddle": "Satula",
     "item.minecraft.salmon": "Raaka lohi",
@@ -3862,7 +3862,7 @@
     "itemGroup.inventory": "Tavaraluettelo",
     "itemGroup.materials": "Materiaalit",
     "itemGroup.misc": "Sekalaiset",
-    "itemGroup.redstone": "Redstone",
+    "itemGroup.redstone": "Oppunium",
     "itemGroup.search": "Etsi esineit\u00e4",
     "itemGroup.tools": "Ty\u00f6kalut",
     "itemGroup.transportation": "Kuljetus",
