--- a/MC Juoppopack/assets/minecraft/lang/en_us.json
+++ b/MC Juoppopack/assets/minecraft/lang/en_us.json
@@ -1044,8 +1044,8 @@
   "block.minecraft.nether_gold_ore": "Nether Gold Ore",
   "block.minecraft.iron_ore": "Iron Ore",
   "block.minecraft.deepslate_iron_ore": "Deepslate Iron Ore",
-  "block.minecraft.coal_ore": "Coal Ore",
-  "block.minecraft.deepslate_coal_ore": "Deepslate Coal Ore",
+  "block.minecraft.coal_ore": "Neekerium Ore",
+  "block.minecraft.deepslate_coal_ore": "Deepslate Neekerium Ore",
   "block.minecraft.oak_wood": "Oak Wood",
   "block.minecraft.spruce_wood": "Spruce Wood",
   "block.minecraft.birch_wood": "Birch Wood",
@@ -1207,7 +1207,7 @@
   "block.minecraft.redstone_wire": "Oppunium Wire",
   "block.minecraft.diamond_ore": "Diamond Ore",
   "block.minecraft.deepslate_diamond_ore": "Deepslate Diamond Ore",
-  "block.minecraft.coal_block": "Block of Coal",
+  "block.minecraft.coal_block": "Block of Neekerium",
   "block.minecraft.diamond_block": "Block of Diamond",
   "block.minecraft.crafting_table": "Crafting Table",
   "block.minecraft.wheat": "Wheat Crops",
@@ -1889,9 +1889,9 @@
   "item.minecraft.iron_shovel": "Iron Shovel",
   "item.minecraft.iron_pickaxe": "Iron Pickaxe",
   "item.minecraft.iron_axe": "Iron Axe",
-  "item.minecraft.flint_and_steel": "Flint and Steel",
+  "item.minecraft.flint_and_steel": "3.14 ja Teräs",
   "item.minecraft.apple": "Apple",
-  "item.minecraft.cookie": "Cookie",
+  "item.minecraft.cookie": "Munapää Keksi",
   "item.minecraft.bow": "AK-47",
   "item.minecraft.bundle": "Bundle",
   "item.minecraft.bundle.fullness": "%s/%s",
@@ -1976,17 +1976,17 @@
   "item.minecraft.rabbit_foot": "Rabbit's Foot",
   "item.minecraft.rabbit_hide": "Rabbit Hide",
   "item.minecraft.beef": "Raw Beef",
-  "item.minecraft.cooked_beef": "Steak",
+  "item.minecraft.cooked_beef": "Hampurilainen",
   "item.minecraft.painting": "Painting",
   "item.minecraft.item_frame": "Item Frame",
-  "item.minecraft.golden_apple": "Golden Apple",
-  "item.minecraft.enchanted_golden_apple": "Enchanted Golden Apple",
+  "item.minecraft.golden_apple": "Burger Ateria",
+  "item.minecraft.enchanted_golden_apple": "Mexikon Vallankumous",
   "item.minecraft.sign": "Sign",
   "item.minecraft.bucket": "Bucket",
   "item.minecraft.water_bucket": "Water Bucket",
   "item.minecraft.lava_bucket": "Lava Bucket",
   "item.minecraft.pufferfish_bucket": "Bucket of Pufferfish",
-  "item.minecraft.salmon_bucket": "Bucket of Salmon",
+  "item.minecraft.salmon_bucket": "Bucket of Siikaa",
   "item.minecraft.cod_bucket": "Bucket of Cod",
   "item.minecraft.tropical_fish_bucket": "Bucket of Tropical Fish",
   "item.minecraft.powder_snow_bucket": "Powder Snow Bucket",
@@ -2029,7 +2029,7 @@
   "item.minecraft.clock": "Clock",
   "item.minecraft.glowstone_dust": "Glowstone Dust",
   "item.minecraft.cod": "Raw COD zombies",
-  "item.minecraft.salmon": "Raw Salmon",
+  "item.minecraft.salmon": "Raaka Siika",
   "item.minecraft.pufferfish": "Pufferfish",
   "item.minecraft.tropical_fish": "Tropical Fish",
   "item.minecraft.cooked_cod": "Cooked Cod",
@@ -2209,9 +2209,9 @@
   "item.minecraft.map": "Empty Map",
   "item.minecraft.carrot": "Carrot",
   "item.minecraft.golden_carrot": "Golden Carrot",
-  "item.minecraft.potato": "Potato",
-  "item.minecraft.baked_potato": "Baked Potato",
-  "item.minecraft.poisonous_potato": "Poisonous Potato",
+  "item.minecraft.potato": "Raaka Ranskalainen",
+  "item.minecraft.baked_potato": "Ranskalaiset",
+  "item.minecraft.poisonous_potato": "Myrkky Ranet",
   "item.minecraft.carrot_on_a_stick": "Carrot on a Stick",
   "item.minecraft.nether_star": "Nether Star",
   "item.minecraft.pumpkin_pie": "Pumpkin Pie",
@@ -2261,7 +2261,7 @@
   "item.minecraft.beetroot_soup": "Beetroot Soup",
   "item.minecraft.dragon_breath": "Dragon's Breath",
   "item.minecraft.elytra": "Elytra",
-  "item.minecraft.totem_of_undying": "Totem of Undying",
+  "item.minecraft.totem_of_undying": "Totem of Eipä ollu",
   "item.minecraft.shulker_shell": "Shulker Shell",
   "item.minecraft.iron_nugget": "Iron Nugget",
   "item.minecraft.knowledge_book": "Knowledge Book",
@@ -2495,7 +2495,7 @@
   "entity.minecraft.potion": "Potion",
   "entity.minecraft.pufferfish": "Pufferfish",
   "entity.minecraft.rabbit": "Rabbit",
-  "entity.minecraft.salmon": "Salmon",
+  "entity.minecraft.salmon": "Kahenkilon SIIKA",
   "entity.minecraft.sheep": "Sheep",
   "entity.minecraft.shulker": "Shulker",
   "entity.minecraft.shulker_bullet": "Shulker Bullet",
