--- a/MC Juoppopack/assets/minecraft/lang/en_us.json
+++ b/MC Juoppopack/assets/minecraft/lang/en_us.json
@@ -2034,10 +2034,10 @@
   "item.minecraft.tropical_fish": "Tropical Fish",
   "item.minecraft.cooked_cod": "Cooked Cod",
   "item.minecraft.cooked_salmon": "Cooked Salmon",
-  "item.minecraft.music_disc_13": "Music Disc",
+  "item.minecraft.music_disc_13": "KarBo_ abouttoCUM",
   "item.minecraft.music_disc_cat": "Music Disc",
   "item.minecraft.music_disc_blocks": "Music Disc",
-  "item.minecraft.music_disc_chirp": "Music Disc",
+  "item.minecraft.music_disc_chirp": "Earrape",
   "item.minecraft.music_disc_far": "Music Disc",
   "item.minecraft.music_disc_mall": "Music Disc",
   "item.minecraft.music_disc_mellohi": "Music Disc",
@@ -2050,10 +2050,10 @@
   "item.minecraft.music_disc_otherside": "Music Disc",
     "item.minecraft.music_disc_5": "GOD TIER LEVY",
     "item.minecraft.music_disc_5.desc": "Synthwaveeee",
-  "item.minecraft.music_disc_13.desc": "C418 - 13",
+  "item.minecraft.music_disc_13.desc": "KarBo_ abouttoCUM",
   "item.minecraft.music_disc_cat.desc": "C418 - cat",
   "item.minecraft.music_disc_blocks.desc": "C418 - blocks",
-  "item.minecraft.music_disc_chirp.desc": "C418 - chirp",
+  "item.minecraft.music_disc_chirp.desc": "Earrape",
   "item.minecraft.music_disc_far.desc": "C418 - far",
   "item.minecraft.music_disc_mall.desc": "C418 - mall",
   "item.minecraft.music_disc_mellohi.desc": "C418 - mellohi",
