--- a/MC Juoppopack/assets/minecraft/lang/en_us.json
+++ b/MC Juoppopack/assets/minecraft/lang/en_us.json
@@ -1965,14 +1965,14 @@
   "item.minecraft.golden_boots": "Golden Boots",
   "item.minecraft.flint": "3.14 Flint",
   "item.minecraft.porkchop": "Raw Porkchop",
-  "item.minecraft.cooked_porkchop": "Cooked Porkchop",
+  "item.minecraft.cooked_porkchop": "Pekoni Hampurilainen",
   "item.minecraft.chicken": "Raw Chicken",
-  "item.minecraft.cooked_chicken": "Cooked Chicken",
+  "item.minecraft.cooked_chicken": "Hot Chicken Wings",
   "item.minecraft.mutton": "Raw Mutton",
-  "item.minecraft.cooked_mutton": "Cooked Mutton",
+  "item.minecraft.cooked_mutton": "Kebab Ateria",
   "item.minecraft.rabbit": "Raw Rabbit",
-  "item.minecraft.cooked_rabbit": "Cooked Rabbit",
-  "item.minecraft.rabbit_stew": "Rabbit Stew",
+  "item.minecraft.cooked_rabbit": "Hesburger Kerros Ateria",
+  "item.minecraft.rabbit_stew": "Meksikon Vallankumous",
   "item.minecraft.rabbit_foot": "Rabbit's Foot",
   "item.minecraft.rabbit_hide": "Rabbit Hide",
   "item.minecraft.beef": "Raw Beef",
@@ -1980,7 +1980,7 @@
   "item.minecraft.painting": "Painting",
   "item.minecraft.item_frame": "Item Frame",
   "item.minecraft.golden_apple": "Burger Ateria",
-  "item.minecraft.enchanted_golden_apple": "Mexikon Vallankumous",
+  "item.minecraft.enchanted_golden_apple": "Enhansatty Ateria",
   "item.minecraft.sign": "Sign",
   "item.minecraft.bucket": "Bucket",
   "item.minecraft.water_bucket": "Water Bucket",
@@ -2032,8 +2032,8 @@
   "item.minecraft.salmon": "Raaka Siika",
   "item.minecraft.pufferfish": "Pufferfish",
   "item.minecraft.tropical_fish": "Tropical Fish",
-  "item.minecraft.cooked_cod": "Cooked Cod",
-  "item.minecraft.cooked_salmon": "Cooked Salmon",
+  "item.minecraft.cooked_cod": "Nugetit",
+  "item.minecraft.cooked_salmon": "Laten Hampurilais Ateria",
   "item.minecraft.music_disc_13": "KarBo_ abouttoCUM",
   "item.minecraft.music_disc_cat": "Music Disc",
   "item.minecraft.music_disc_blocks": "Music Disc",
@@ -2494,7 +2494,7 @@
   "entity.minecraft.polar_bear": "Polar Bear",
   "entity.minecraft.potion": "Potion",
   "entity.minecraft.pufferfish": "Pufferfish",
-  "entity.minecraft.rabbit": "Rabbit",
+  "entity.minecraft.rabbit": "Mexikon Vallankumous",
   "entity.minecraft.salmon": "Kahenkilon SIIKA",
   "entity.minecraft.sheep": "Sheep",
   "entity.minecraft.shulker": "Shulker",
