--- a/MC Juoppopack/assets/minecraft/lang/en_us.json
+++ b/MC Juoppopack/assets/minecraft/lang/en_us.json
@@ -1972,7 +1972,7 @@
   "item.minecraft.cooked_mutton": "Kebab Ateria",
   "item.minecraft.rabbit": "Raw Rabbit",
   "item.minecraft.cooked_rabbit": "Hesburger Kerros Ateria",
-  "item.minecraft.rabbit_stew": "Meksikon Vallankumous",
+  "item.minecraft.rabbit_stew": "Mexsikon Vallankumous",
   "item.minecraft.rabbit_foot": "Rabbit's Foot",
   "item.minecraft.rabbit_hide": "Rabbit Hide",
   "item.minecraft.beef": "Raw Beef",
@@ -2033,7 +2033,7 @@
   "item.minecraft.pufferfish": "Pufferfish",
   "item.minecraft.tropical_fish": "Tropical Fish",
   "item.minecraft.cooked_cod": "Nugetit",
-  "item.minecraft.cooked_salmon": "Laten Hampurilais Ateria",
+  "item.minecraft.cooked_salmon": "Lasten Hampurilais Ateria",
   "item.minecraft.music_disc_13": "KarBo_ abouttoCUM",
   "item.minecraft.music_disc_cat": "Music Disc",
   "item.minecraft.music_disc_blocks": "Music Disc",
@@ -2485,7 +2485,7 @@
   "entity.minecraft.painting": "Painting",
   "entity.minecraft.panda": "Panda",
   "entity.minecraft.parrot": "Parrot",
-  "entity.minecraft.phantom": "Phantom",
+  "entity.minecraft.phantom": "HOMO NEEKERI",
   "entity.minecraft.pig": "Pig",
   "entity.minecraft.piglin": "Piglin",
   "entity.minecraft.piglin_brute": "Piglin Brute",
@@ -2494,7 +2494,7 @@
   "entity.minecraft.polar_bear": "Polar Bear",
   "entity.minecraft.potion": "Potion",
   "entity.minecraft.pufferfish": "Pufferfish",
-  "entity.minecraft.rabbit": "Mexikon Vallankumous",
+  "entity.minecraft.rabbit": "Rabbit",
   "entity.minecraft.salmon": "Kahenkilon SIIKA",
   "entity.minecraft.sheep": "Sheep",
   "entity.minecraft.shulker": "Shulker",
